fix spacing around logo

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -5,7 +5,9 @@ header {
   background-color: #ffffff;
 }
 header svg {
-  margin: 30px;
   max-height: 125px;
   max-width: 374px;
+}
+.logo-bar {
+  padding: 2rem;
 }
